--- a/app/src/main/res/layout/activity_lector.xml
+++ b/app/src/main/res/layout/activity_lector.xml
@@ -35,12 +35,35 @@
         android:id="@+id/startRecordingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:text="Iniciar Lectura"/>
+
+    <Button
+        android:id="@+id/btn"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="96sp"
+        android:layout_height="96sp"
+
+        android:background="@drawable/ic_baseline_mic_24" />
+    <EditText
+        android:id="@+id/editText"
+        style="@android:style/Widget.DeviceDefault.EditText"
+        android:layout_width="350sp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+
+        android:ems="10"
+        android:hint="@string/you_will_see_text_here"
+        android:inputType="textPersonName"
+        android:singleLine="false"
+        android:autofillHints="hold mis and speak" />
 
     <Button
         android:id="@+id/stopRecordingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:text="Detener Lectura"/>
 
 </LinearLayout>
