--- a/app/src/main/res/layout/fragment_student_list.xml
+++ b/app/src/main/res/layout/fragment_student_list.xml
@@ -17,13 +17,13 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:text="Listado de cursos"
+            android:text="Listado de Estudiantes"
             android:textAlignment="center"
             android:textColor="#040404"
             android:textSize="17dp"
             android:textStyle="bold" />
         <androidx.appcompat.widget.SearchView
-            android:id="@+id/svSearchCourse"
+            android:id="@+id/svSearchStudent"
             android:background="@drawable/search_view_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </com.facebook.shimmer.ShimmerFrameLayout>
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerviewCourse"
+                android:id="@+id/recyclerviewStudent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
@@ -65,18 +65,6 @@
 
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/favNewCourse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/purple_500"
-        android:clickable="true"
-        android:focusable="true"
-        android:src="@android:drawable/ic_input_add"
-        app:backgroundTint="@color/design_default_color_primary" />
+
 
 </RelativeLayout>
