--- a/app/src/main/res/layout/cardview_course.xml
+++ b/app/src/main/res/layout/cardview_course.xml
@@ -41,7 +41,6 @@
             <LinearLayout
                 android:gravity="top"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
                 android:orientation="horizontal"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/border"
@@ -55,15 +54,14 @@
                 <TextView
                     android:text="N/D"
                     android:layout_weight="1"
-                    android:id="@+id/tvNameCarer"
-                    android:layout_width="0dp"
+                    android:id="@+id/tvNameCourse"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
             <LinearLayout
                 android:gravity="top"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
                 android:orientation="horizontal"
                 android:background="@drawable/border"
                 android:layout_marginBottom="5dp"
@@ -77,8 +75,8 @@
                 <TextView
                     android:text="N/D"
                     android:layout_weight="1"
-                    android:id="@+id/tvGenderPatient"
-                    android:layout_width="0dp"
+                    android:id="@+id/tvParallelCourse"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
@@ -94,15 +92,67 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Codigo de clase:" />
+                    android:text="Codigo:" />
                 <TextView
                     android:text="N/D"
                     android:layout_weight="1"
-                    android:id="@+id/tvbirthDatePatient"
+                    android:id="@+id/tvCodeClass"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
 
+
+                <androidx.cardview.widget.CardView
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+
+                    android:id="@+id/miniCardViewCopy"
+
+                    android:layout_width="50dp"
+
+                    android:layout_height="50dp"
+
+                    app:cardElevation="18dp"
+
+                    app:cardCornerRadius="8dp"
+
+                    android:layout_margin="5dp"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
+
+                    app:layout_constraintHorizontal_bias="0.65"
+
+                    app:layout_constraintStart_toStartOf="parent"
+
+                    app:layout_constraintTop_toBottomOf="@+id/textViewPatientTitle" >
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+
+                        android:layout_height="match_parent"
+
+                        android:orientation="vertical"
+
+                        android:gravity="center"
+
+                        android:layout_gravity="center_horizontal|center_vertical">
+
+                        <ImageView
+
+                            android:layout_width="40dp"
+
+                            android:layout_height="40dp"
+
+                            android:src="@drawable/baseline_content_copy_24"
+                            />
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
+
+
 
         </LinearLayout>
 
