--- a/app/src/main/res/layout/activity_user_add.xml
+++ b/app/src/main/res/layout/activity_user_add.xml
@@ -61,6 +61,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:startIconDrawable="@drawable/baseline_airline_seat_individual_suite_24"
         app:endIconMode="clear_text">
 
@@ -122,8 +123,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/baseline_email_24"
-        app:endIconMode="clear_text">
+        app:startIconDrawable="@drawable/baseline_email_24">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_email"
             android:layout_width="match_parent"
