--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,7 +32,7 @@
                 <item
                     android:id="@+id/nav_report"
                     android:icon="@drawable/ic_proccedings"
-                    android:visible="true"
+                    android:visible="false"
                     android:title="@string/menu_report" />
                 <item
                     android:id="@+id/nav_document"
